[project]
name = "tinylab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tiktoken>=0.12.0",
    "tinygrad",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]

[tool.uv.sources]
tinygrad = { path = "../../tinygrad" }
